add：이미지 파일 추가

--- a/index_main.html
+++ b/index_main.html
@@ -6,6 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <ul>
+        <li>
+            <img src="./화면 캡처 2024-11-21 153854.png" alt="">
+        </li>
+        <li>
+            <img src="./화면 캡처 2024-11-21 153916.png" alt="">
+        </li>
+        <li>
+            <img src="./화면 캡처 2024-11-21 153939.png" alt="">
+        </li>
+        <li>
+            <img src="./화면 캡처 2024-11-21 154001.png" alt="">
+        </li>
+        <li>
+            <img src="./화면 캡처 2024-11-21 154018.png" alt="">
+        </li>
+    </ul>
 </body>
 </html>
